--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
-<div class="login">
-    <h1> Iniciar Sesion</h1>
-    <form method="post">
+<div id="app" class="login">
+    <h1> Iniciar Sesión</h1>
+    <form @submit.prevent="login">
         <div class="username">
-            <input type="text" required>
+            <input type="text" v-model="username" required>
             <label>Usuario</label>
         </div>
         <div class="username">
-            <input type="password" required>
+            <input type="password" v-model="password" required>
             <label>Contraseña</label>
         </div>
-        <div class="recordar">Olvide mi contraseña</div>
+        <div class="recordar">Olvidé mi contraseña</div>
         <input type="submit" value="Iniciar">
-        <div class="registro">
-            Quiero <a href="#">Registrarme</a>
-        </div>
+
+        
     </form>
 </div>
+<script src="client.js"></script>
 </body>
 </html>
