--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -102,7 +102,7 @@
 
         <div class="tasks">
             <div class="title">
-                <h2 class="section--title">Recent Patients</h2>
+                <h2 class="section--title">Tareas Asiganadas</h2>
                 <button class="add"><i class="ri-add-line"></i>Añadir Tarea</button>
             </div>
             <div class="table">
