--- a/Frontend/superAdmin/super-admin.html
+++ b/Frontend/superAdmin/super-admin.html
@@ -63,11 +63,13 @@
             <div class="title">
                 <h2 class="section--title">Empleados</h2>
                 <div class="employees--right--btns">
-                    <select name="date"  class="dropdown doctor--filter">
-                        <option >Filtrar </option>
-                        <option value="free">Libre</option>
-                        <option value="busy">Ocupado</option>
-                    </select>
+                    <label>
+                        <select name="date"  class="dropdown doctor--filter">
+                            <option >Filtrar </option>
+                            <option value="free">Libre</option>
+                            <option value="busy">Ocupado</option>
+                        </select>
+                    </label>
                     <button class="add"><i class="ri-add-line"></i>Añadir Empelado</button>
                 </div>
             </div>
