actualizacion y mejoras de algunos componentes basicos en frontend

--- a/Frontend/admin/admin.html
+++ b/Frontend/admin/admin.html
@@ -111,7 +111,7 @@
                         <option value="free">Libre</option>
                         <option value="busy">Ocupado</option>
                     </select>
-                    <button class="add"><i class="ri-add-line"></i>Añadir Doctor</button>
+                    <button class="add"><i class="ri-add-line"></i>Asignar Tarea a Doctor</button>
                 </div>
             </div>
             <div class="employees--cards">
