Actualizacion de login para crear usuarios, ver y deshabilitar usuarios

--- a/Frontend/admin/admin.html
+++ b/Frontend/admin/admin.html
@@ -33,7 +33,7 @@
             }
     
 
-            if (payload.role !== 'A') { 
+            if (payload.role !== 'GER') { 
                 alert('Acceso no autorizado.');
                 window.location.href = '../index.html'; 
                 return;
