--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -32,7 +32,7 @@
             }
     
      
-            if (payload.role !== 'E') { 
+            if (payload.role !== 'EMP') { 
                 alert('Acceso no autorizado.');
                 window.location.href = '../index.html'; 
                 return;
