--- a/Frontend/superAdmin/super-admin.html
+++ b/Frontend/superAdmin/super-admin.html
@@ -33,7 +33,7 @@
             }
     
 
-            if (payload.role !== 'G') { 
+            if (payload.role !== 'ADM') { 
                 alert('Acceso no autorizado.');
                 window.location.href = '../index.html'; 
                 return;
