--- a/Frontend/superAdmin/super-admin.html
+++ b/Frontend/superAdmin/super-admin.html
@@ -90,7 +90,7 @@
     <div class="main--content">
         <div class="employees">
             <div class="title">
-                <h2 class="section--title">Empleados</h2>
+                <h2 class="section--title">Gerentes de Area  </h2>
                 <div class="employees--right--btns">
                     <label>
                         <select name="date"  class="dropdown doctor--filter">
@@ -99,14 +99,17 @@
                             <option value="busy">Ocupado</option>
                         </select>
                     </label>
-                    <button class="add"><i class="ri-add-line"></i>Añadir Empelado</button>
+                    <a href="createEmp.html">
+                        <button  class="add"><i  class="ri-add-line"></i>Añadir Empelado</button>
+
+                    </a>
                 </div>
             </div>
             <div class="employees--cards">
                 <a href="#" class="employees--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/Doc1.png" alt="">
+                            <img src="../img/Main.png" alt="">
                         </div>
                     </div>
                     <p class="free">Libre</p>
@@ -127,10 +130,50 @@
                     </div>
                     <p class="busy">Ocupado</p>
                 </a>
+            </div>
+        </div>
+        <div class="employees">
+            <div class="title">
+                <h2 class="section--title">Empleados</h2>
+                <div class="employees--right--btns">
+                    <label>
+                        <select name="date"  class="dropdown doctor--filter">
+                            <option >Filtrar </option>
+                            <option value="free">Libre</option>
+                            <option value="busy">Ocupado</option>
+                        </select>
+                    </label>
+                </div>
+            </div>
+            <div class="employees--cards">
                 <a href="#" class="employees--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/nurse1.png" alt="">
+                            <img src="../img/People.png" alt="">
+                        </div>
+                    </div>
+                    <p class="free">Libre</p>
+                </a>
+                <a href="#" class="employees--card">
+                    <div class="img--box--cover">
+                        <div class="img--box">
+                            <img src="../img/People.png" alt="">
+                        </div>
+                    </div>
+                    <p class="busy">Ocupado</p>
+                </a>
+                <a href="#" class="employees--card">
+                    <div class="img--box--cover">
+                        <div class="img--box">
+                            <img src="../img/People.png" alt="">
+                        </div>
+                    </div>
+                    <p class="busy">Ocupado</p>
+                </a>
+                <a href="#" class="employees--card">
+                    <div class="img--box--cover">
+                        <div class="img--box">
+                            <img src="../img/People.png" alt="">
                         </div>
                     </div>
                     <p class="free">Libre</p>
