--- a/Frontend/admin/admin.html
+++ b/Frontend/admin/admin.html
@@ -103,7 +103,7 @@
                 <div class="card card-1">
                     <div class="card--data">
                         <div class="card--content">
-                            <h5 class="card--title">Total Doctores</h5>
+                            <h5 class="card--title">Total Empleados</h5>
                             <h1>4</h1>
                         </div>
                         <i class="ri-user-2-line card--icon--lg"></i>
@@ -133,21 +133,21 @@
         </div>
         <div class="employees">
             <div class="title">
-                <h2 class="section--title">Doctores</h2>
+                <h2 class="section--title">Empelados</h2>
                 <div class="employees--right--btns">
                     <select name="date"  class="dropdown doctor--filter">
                         <option >Filtrar </option>
                         <option value="free">Libre</option>
                         <option value="busy">Ocupado</option>
                     </select>
-                    <button class="add"><i class="ri-add-line"></i>Asignar Tarea a Doctor</button>
+                    <button class="add"><i class="ri-add-line"></i>Asignar Tareas</button>
                 </div>
             </div>
             <div class="employees--cards">
                 <a href="#" class="doctor--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/Doc1.png" alt="">
+                            <img src="../img/People.png" alt="">
                         </div>
                     </div>
                     <p class="free">Libre</p>
@@ -155,7 +155,7 @@
                 <a href="#" class="doctor--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/Doc2.png" alt="">
+                            <img src="../img/People.png" alt="">
                         </div>
                     </div>
                     <p class="busy">Ocupado</p>
@@ -163,7 +163,7 @@
                 <a href="#" class="doctor--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/Doc3.png" alt="">
+                            <img src="../img/People.png" alt="">
                         </div>
                     </div>
                     <p class="busy">Ocupado</p>
@@ -171,7 +171,7 @@
                 <a href="#" class="doctor--card">
                     <div class="img--box--cover">
                         <div class="img--box">
-                            <img src="../img/Doc4.png" alt="">
+                            <img src="../img/People.png" alt="">
                         </div>
                     </div>
                     <p class="free">Libre</p>
