--- a/Frontend/superAdmin/super-admin.html
+++ b/Frontend/superAdmin/super-admin.html
@@ -75,6 +75,18 @@
                     <span class="sidebar--item">Horario</span>
                 </a>
             </li>
+            <li>
+                <a href="viewEmp.html">
+                    <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
+                    <span class="sidebar--item">Ver Lista Empleados </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
+                    <span class="sidebar--item">Borrar Empleados </span>
+                </a>
+            </li>
 
         </ul>
         <ul class="sidebar--bottom-items">
