--- a/Frontend/Admin/super-admin.html
+++ b/Frontend/Admin/super-admin.html
@@ -82,7 +82,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="delEmpt.html">
                     <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
                     <span class="sidebar--item">Borrar Empleados </span>
                 </a>
