--- a/Frontend/Admin/super-admin.html
+++ b/Frontend/Admin/super-admin.html
@@ -80,13 +80,6 @@
                     <span class="sidebar--item">Ver Lista Empleados </span>
                 </a>
             </li>
-            <li>
-                <a href="delEmpt.html">
-                    <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
-                    <span class="sidebar--item">Borrar Empleados </span>
-                </a>
-            </li>
-
         </ul>
         <ul class="sidebar--bottom-items">
             <li>
@@ -111,7 +104,7 @@
                         </select>
                     </label>
                     <a href="createEmp.html">
-                        <button  class="add"><i  class="ri-add-line"></i>Añadir Empelado</button>
+                        <button  class="add"><i  class="ri-add-line"></i>Añadir Empleado</button>
 
                     </a>
                 </div>
