--- a/Frontend/Admin/super-admin.html
+++ b/Frontend/Admin/super-admin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,6 +41,7 @@
         }</script> 
 <section class="header">
     <div class="logo">
+
         <i class="ri-menu-line icon icon-0 menu"></i>
         <h2>Hosp<span>Ital</span></h2>
     </div>
@@ -60,6 +61,8 @@
     </div>
 </section>
 <section class="main">
+  <div class="mobile-sidebar"></div>
+  <div class="sidebar"></div>
     <div class="sidebar">
         <ul class="sidebar--items">
             <li>
