Se arregla error de no mostrar imagen en reuepracion de clave

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,10 +11,10 @@
 <div id="app" class="login-container">
 
     <div class="image-container-desktop">
-        <img src="../Frontend/img/logo.png" alt="">
+        <img src="./img/logo.png" alt="">
     </div>
     <div class="image-container-mobile">
-        <img src="../Frontend/img/logo_mobil.png" alt="">
+        <img src="./img/logo_mobil.png" alt="">
     </div>
     <div class="login">
         <h1>Iniciar Sesión</h1>
