--- a/Frontend/Admin/editEmp.html
+++ b/Frontend/Admin/editEmp.html
@@ -3,28 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario de Registro</title>
-    <link rel="stylesheet" href="styles-add-emp.css" />
+    <title>Formulario de Edición de Empleado</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   </head>
   <body>
     <div id="app">
-      <h2>Formulario de Registro de Usuario Completo</h2>
-
-      <form @submit.prevent="registrar">
+      <h2>Formulario de Edición de Empleado</h2>
+      <div v-if="empleadoSeleccionado">
+      <form @submit.prevent="actualizarEmpleado">
         <h3>Persona</h3>
         <label for="id_persona">ID Persona:</label>
         <input
           type="number"
           id="id_persona"
-          v-model="persona.id_persona"
-          required
+          v-model="empleadoSeleccionado.ID_PERSONA"
+          disabled
         /><br /><br />
 
         <label for="tipo_identificacion">Tipo de Identificación:</label>
         <select
           id="tipo_identificacion"
-          v-model="persona.tipo_identificacion"
+          v-model="empleadoSeleccionado.TIPO_IDENTIFICACION"
           required
         >
           <option value="CC">Cédula de Ciudadanía</option>
@@ -36,7 +35,7 @@
         <input
           type="text"
           id="nombres"
-          v-model="persona.nombres"
+          v-model="empleadoSeleccionado.NOMBRES"
           required
         /><br /><br />
 
@@ -44,22 +43,22 @@
         <input
           type="text"
           id="apellidos"
-          v-model="persona.apellidos"
+          v-model="empleadoSeleccionado.APELLIDOS"
           required
         /><br /><br />
 
         <label for="genero">Género:</label>
-        <select id="genero" v-model="persona.genero" required>
+        <select id="genero" v-model="empleadoSeleccionado.GENERO" required>
           <option value="M">Masculino</option>
           <option value="F">Femenino</option>
           <option value="O">Otro</option></select
-        ><br /><br />
+        ><br /><br />        
 
         <label for="correo">Correo Electrónico:</label>
         <input
           type="email"
           id="correo"
-          v-model="persona.correo"
+          v-model="empleadoSeleccionado.CORREO"
           required
         /><br /><br />
 
@@ -67,7 +66,7 @@
         <input
           type="text"
           id="direccion"
-          v-model="persona.direccion"
+          v-model="empleadoSeleccionado.DIRECCION"
           required
         /><br /><br />
 
@@ -75,45 +74,39 @@
         <input
           type="number"
           id="telefono"
-          v-model="persona.telefono"
+          v-model="empleadoSeleccionado.TELEFONO"
           required
-        /><br /><br />
+        /><br /><br />        
 
-        <!-- Usuario -->
         <h3>Usuario</h3>
         <label for="id_usuario">Usuario:</label>
         <input
           type="text"
           id="id_usuario"
-          v-model="usuario.id_usuario"
-          required
-        /><br /><br />
-
-        <label for="contrasena">Contraseña:</label>
-        <input
-          type="password"
-          id="contrasena"
-          v-model="usuario.contrasena"
-          required
+          v-model="empleadoSeleccionado.ID_USUARIO"
+          disabled
         /><br /><br />
 
         <label for="tipo_usuario">Tipo de Usuario:</label>
-        <select id="tipo_usuario" v-model="usuario.tipo_usuario" required>
+        <select id="tipo_usuario" v-model="empleadoSeleccionado.TIPO_USUARIO" required>
           <option value="ADM">Administrador</option>
           <option value="GER">Gerente de Área</option>
           <option value="EMP">Empleado</option></select
         ><br /><br />
 
         <label for="estado">Estado:</label>
-        <select id="estado" v-model="usuario.estado" required>
+        <select id="estado" v-model="empleadoSeleccionado.ESTADO" required>
           <option value="A">Activo</option>
           <option value="N">No Activo</option></select
         ><br /><br />
 
-        <!-- Empleado -->
         <h3>Empleado</h3>
         <label for="id_empleo">Empleo:</label>
-        <select id="id_empleo" v-model="empleado.id_empleo" required>
+        <select
+          id="id_empleo"
+          v-model="empleadoSeleccionado.ID_EMPLEO"
+          required
+        >
           <option value="1">Administrador</option>
           <option value="2">Gerente de Mantenimiento</option>
           <option value="3">Gerente de Auxiliares de Enfermería</option>
@@ -123,7 +116,8 @@
           <option value="7">Auxiliar de Enfermería</option>
           <option value="8">Médico</option></select
         ><br /><br />
-        <label for="id_gerente">ID Gerente:</label>
+        
+        <label for="id_gerente">ID Gerente</label>
         <select v-model="empleado.id_gerente">
           <option
             v-for="gerente in gerentes"
@@ -132,13 +126,13 @@
           >
             {{ gerente.id_usuario }}
           </option>
-        </select>
+        </select><br /><br />
 
         <label for="fecha_contratacion">Fecha de Contratación:</label>
         <input
           type="date"
           id="fecha_contratacion"
-          v-model="empleado.fecha_contratacion"
+          v-model="empleadoSeleccionado.FECHA_CONTRATACION"
           required
         /><br /><br />
 
@@ -146,7 +140,7 @@
         <input
           type="time"
           id="hora_entrada"
-          v-model="empleado.hora_entrada"
+          v-model="empleadoSeleccionado.HORA_ENTRADA"
           required
         /><br /><br />
 
@@ -154,16 +148,18 @@
         <input
           type="time"
           id="hora_salida"
-          v-model="empleado.hora_salida"
+          v-model="empleadoSeleccionado.HORA_SALIDA"
           required
         /><br /><br />
 
-        <button type="submit">Registrar Usuario</button>
+        <button type="submit">Actualizar Empleado</button>
         <a href="super-admin.html">
-          <span class="bottom">Cancelar</span>
+          <span>Cancelar</span>
         </a>
       </form>
     </div>
+    <div v-else>
+        <p>Cargando datos del empleado...</p>
     <script src="admin.js"></script>
   </body>
 </html>
